--- a/_posts/2019-07-06-the-us-narrative-today.html
+++ b/_posts/2019-07-06-the-us-narrative-today.html
@@ -2547,107 +2547,107 @@ stories:
   domain: http://www.malvern-online.com/
   link: https://www.malvern-online.com/content/leopard-football-welcomes-trio-brown-finley-and-pennington-coaching-staff
 images:
-- name: server-cloud-server-racks-clouds-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-internet-numbers.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-crabapple.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-colorful-dream.jpg
-- name: beach-clouds-lifeguard-beachclouds-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-purple-pond.jpg
-- name: birdhouse-birdhouse-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-gred-mash.jpg
-- name: gypsymosaic-gypsy-eyes-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-purple-pond.jpg
-- name: hollywood-building-hollywood-building-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-yellow-collage.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-china-prop.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-china-prop.jpg
-- name: birdhouse-birdhouse-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-emily-carr.jpg
-- name: downtown-trucksilo-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-pablo-blue.jpg
-- name: store-on-corner-store-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-bright-sand.jpg
-- name: walled-garden-walled-garden-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-graham-sutherland.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-post-modern.jpg
-- name: old-door-lock-old-door-lock-2-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-copper-circuit-2.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-attack-planes.jpg
-- name: cyber-api-description-wars-api-specification-wars.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cyber-api-description-wars-api-specification-wars.png
-- name: oldtrain-oldtrain-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-crafty-painting.jpg
-- name: old-barn-old-barn-1500-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-ww2-dresden.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-smoking-cigarette.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-dry-skin.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-sunday.jpg
-- name: oldsmallboat-oldsmallboat-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-dark-rain.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-yellow-paper.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-yellow-paper.JPG
-- name: miamibeach-miamibeach-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-bright-sand.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-nazi-poster.jpg
-- name: oldbarn-oldbarn-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-oily-mcoilface.jpg
-- name: server-cloud1-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud1-feed-people.jpg
-- name: razorcliff-razorcliff-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-light-dali.jpg
-- name: statue-of-liberty-front-view-statueofliberty-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-purple-pond.jpg
-- name: beach-rocks-beach-rocks-currents-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-alien-goggles.jpg
-- name: rockingchair-rockingchair-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-clean-view.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-hot-spicy.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-hot-spicy.JPG
-- name: gypsymosaic-gypsy-eyes-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-bright-sand.jpg
-- name: udnie-IMG_4833.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_4833.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-blue-electricity.jpg
-- name: oldhousecars-house-old-cars-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-kandinsky-bv.jpg
-- name: windowmountain-window-mountain-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-oily-mcoilface.jpg
-- name: nyc-flag-nycflag-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-blue-electricity.jpg
-- name: border-crossing-bordercrossing-aqua.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-aqua.png
-- name: miamibeach-miamibeach-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-blue-electricity.jpg
-- name: server-cloud-server-racks-door-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-deep-connections.jpg
-- name: art-museum-art-museum-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-satan-red.jpg
-- name: aws-s3-stories-border-traffic.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-border-traffic.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-pablo-blue.jpg
-- name: subway-subway-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-ww2-color.jpg
-- name: server-cloud-server-racks-door-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-diego-rivera1.jpg
-- name: yuma-bank-yuma-bak-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-crafty-painting.jpg
-- name: old-granary-field-oldhouse-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-ww2-dresden.jpg
-- name: store-on-corner-store-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-colorful-dream.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-graham-sutherland.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-graham-sutherland.JPG
-- name: liberty-back-statue-liberty-back-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-dark-rain.jpg
+- name: berlinwall2-berlinwall-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-alien-goggles.jpg
+- name: old-granary-field-oldhouse-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-sand-paper.jpg
+- name: machine-road-machine-road-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-matrix.jpg
+- name: oldcabin-store-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-neo-instinct.jpg
+- name: legal-statue-legalstatue-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-satan-red.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-dark-dali.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-dark-dali.png
+- name: gypsymosaic-gypsy-eyes-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-graham-sutherland.jpg
+- name: windowmountain-window-mountain-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-creativity.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-smooth-ride.jpg
+- name: mistywoods-babyfoot-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-alberto-giacometti.jpg
+- name: adam-smith-adam-smith-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-nazi-poster.jpg
+- name: downtown-los-angeles-downtown-la-hot-spicy.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-hot-spicy.JPG
+- name: downtown-fredericksburg-downtown-fredericksburg-colorful-dream.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-colorful-dream.JPG
+- name: oldbarn-oldbarn-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-neo-instinct.jpg
+- name: blossombar-creativity-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-creativity-file-00-00-50-62.jpg
+- name: white-house-lawn-white-house-lawn-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-smooth-ride.jpg
+- name: copper-circuit-IMG_7936.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_7936.jpg
+- name: machine-road-machine-road-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-kand-two.jpg
+- name: gears-4882162452-fa3126b38d-b-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-far-away.jpg
+- name: meadowbutterfly-meadow-butterfly-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-graham-sutherland.jpg
+- name: capital-battle-capitolbattle-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-kand-two.jpg
+- name: oldtrain-oldtrain-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-kandinsky-bv.jpg
+- name: berlinwall-DSC-0084-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-deep-connections.jpg
+- name: aws-s3-square-beach-rocks-currents-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-beach-rocks-currents-blue-circuit-5.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-copper-circuit-2.jpg
+- name: downtheline-downtheline-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-kand-two.jpg
+- name: beach-clouds-lifeguard-beachclouds-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-oily-mcoilface.jpg
+- name: oldcabin-oldcabin-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-crafty-painting.jpg
+- name: oldroad-old-road-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-spagetti-accident.jpg
+- name: old-church-oldchurch-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-plentiful.jpg
+- name: window-window-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-umberto-bocc.jpg
+- name: powerlines-power-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-deep-connections.jpg
+- name: christianity-christianity-under-construction-jap-dys-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-jap-dys-1.jpg
+- name: subway-subway-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-dali-two.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-creativity.jpg
+- name: fence-mexico-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-light-dali.jpg
+- name: flower-barbed-wire-flower-barbed-wire-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-sand-paper.jpg
+- name: ellis-island-ellis-island-room-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-sand-paper.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-umberto-bocc.jpg
+- name: razorwire-DSC-0080-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-blue-brush.jpg
+- name: stories-statue-face-open-mouth-blue-circuit-5.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-statue-face-open-mouth-blue-circuit-5.png
+- name: rockingchair-rockingchair-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-yellow-paper.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-horiz-circuit.jpg
+- name: downtown-trucksilo-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-umberto-bocc.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-attack-planes.jpg
+- name: udnie-IMG_6333.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_6333.jpg
+- name: christianity-christianity-under-construction-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-satan-red.jpg
+- name: old-barn-old-barn-1500-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-blue-brush.jpg
+- name: beach-rocks-beach-rocks-currents-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-aqua.jpg
+- name: dc-statue-dcstatue-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-internet-numbers.jpg
+- name: crow_creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_creativity.jpg
 ---
 No Ifs, Ands, Or Buts!.&nbsp;Park Rapids Makes Big Noise For Independence Day.&nbsp;Breaking Down Gatewoods Upcoming Championship Defense.&nbsp;Masonic Lodge Raffle Winners.&nbsp;Hubbard County Sheriffs Report.&nbsp;Unwelcome Kindnesses Of Aging.&nbsp;Fireworks In Kyle Prompt Grass Fires.&nbsp;We Love The Daily Grind.&nbsp;
